--- a/package.xml
+++ b/package.xml
@@ -51,10 +51,12 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>behaviortree_cpp_v3</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>pkg_rp_msgs</build_depend>
   <build_export_depend>behaviortree_cpp_v3</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>behaviortree_cpp_v3</exec_depend>
   <exec_depend>roscpp</exec_depend>
+  <exec_depend>pkg_rp_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
